# rust-contracts

./: .gitignore  Cargo.toml
test3/: Cargo.toml  build.rs
test3/src/: block_reward.rs  bridge_validators.rs  lib.rs  parse_message.rs
test3/src/upgradeability/: eternal_storage.rs  mod.rs  proxy.rs  upgradeability_storage.rs
test3/src/upgradeable_contracts/: Validateable.rs  basic_home_bridge.rs  mod.rs  ownable.rs
